add custom mailbox exampe

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,3 +6,19 @@ my-blocking-dispatcher {
   }
   throughput = 1
 }
+
+ticket-system-demo {
+
+    custom-ticket-mailbox {
+        mailbox-type = "com.acho.example21.CustomMailbox$TicketPriorityMailbox"
+    }
+
+    akka.actor.default.dispatcher {
+        type = Dispatcher
+        executor = "thread-pool-executor"
+        thread-pool-executor {
+            fixed-pool-size = 1
+        }
+        throughput = 10
+    }
+}
